--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "animate.css-react": "^1.1.0",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-countup": "^6.4.1",
@@ -13,6 +15,7 @@
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "react-scrollbars-custom": "^4.1.1",
+    "react-tsparticles": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
